[project]
name = "douban-web-client"
version = "0.1.0"
description = "A simple Python client for Douban, based on the web interface."
authors = [{ name = "Dodge Pock", email = "dodgepock@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]  # 开发工具可选安装
